--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "typescript": "~3.5.3",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.9.1",
+    "@angular/cli": "^9.1.4",
+    "@angular/compiler-cli": "^8.2.14"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.3",
-    "@angular/cli": "~8.3.3",
-    "@angular/compiler-cli": "~8.2.4",
+    "@angular/cli": "^9.1.4",
+    "@angular/compiler-cli": "^8.2.14",
     "@angular/language-service": "~8.2.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
